--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/counter_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/counter_view.xml
@@ -1,64 +1,75 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="2dp"
     android:background="@drawable/rounded_corners_chunk_material"
-    android:orientation="horizontal"
     android:clickable="true"
     android:focusable="true"
-    android:layout_marginBottom="2dp"
-    android:layout_marginTop="2dp"
+    android:orientation="horizontal"
     android:padding="5dp">
 
-        <TextView
-            android:id="@+id/counterLabelView"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_weight="2"
-            android:background="@color/colorWhite"
-            android:gravity="left|center"
-            android:text="default"
-            android:fontFamily="@font/montserratitalic"
-            android:textSize="30sp"
-            tools:ignore="HardcodedText,NestedWeights,RtlHardcoded,SpUsage" />
+    <TextView
+        android:id="@+id/counterLabelView"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:background="@color/colorWhite"
+        android:fontFamily="@font/montserratitalic"
+        android:gravity="center"
+        android:text="default"
 
-        <Button
-            android:id="@+id/counterSub"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight=".7"
-            android:text="-"
-            android:textColor="@color/textWhite"
-            android:textSize="20sp"
-            android:fontFamily="@font/montserratbold"
-            tools:ignore="HardcodedText,SpUsage" />
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/counterSub"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText,NestedWeights,RtlHardcoded,SpUsage" />
 
-        <TextView
-            android:id="@+id/counterD"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_weight=".5"
-            android:gravity="center"
-            android:text="0"
-            android:textColor="@color/textDark"
-            android:fontFamily="@font/montserratsemibold"
-            android:textSize="32sp"
-            tools:ignore="HardcodedText,SpUsage" />
+    <Button
+        android:id="@+id/counterSub"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserratbold"
+        android:text="-"
+        android:textColor="@color/textWhite"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/counterD"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText,SpUsage" />
 
-        <Button
-            android:id="@+id/counterAdd"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight=".7"
-            android:text="+"
-            android:textColor="@color/textWhite"
-            android:textSize="20sp"
-            android:fontFamily="@font/montserratbold"
-            tools:ignore="HardcodedText,SpUsage" />
+    <TextView
+        android:id="@+id/counterD"
+        android:layout_width="45dp"
+        android:layout_height="0dp"
+        android:fontFamily="@font/montserratsemibold"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="@color/textDark"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/counterAdd"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText,SpUsage" />
+
+    <Button
+        android:id="@+id/counterAdd"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fontFamily="@font/montserratbold"
+        android:text="+"
+        android:textColor="@color/textWhite"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText,SpUsage" />
 
 
-    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
