--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/spinner_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/spinner_view.xml
@@ -38,6 +38,8 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/spinnerLabelView"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
