--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/chronometer_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/chronometer_view.xml
@@ -5,8 +5,7 @@
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="2dp"
+    android:layout_margin="2dp"
     android:background="@drawable/rounded_corners_chunk_material"
     android:clickable="true"
     android:focusable="true">
