--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/counter_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/counter_view.xml
@@ -4,8 +4,7 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="2dp"
+    android:layout_margin="2dp"
     android:background="@drawable/rounded_corners_chunk_material"
     android:clickable="true"
     android:focusable="true"
