--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/toggle_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/toggle_view.xml
@@ -7,8 +7,7 @@
     android:orientation="horizontal"
     android:clickable="true"
     android:focusable="true"
-    android:layout_marginBottom="2dp"
-    android:layout_marginTop="2dp"
+    android:layout_margin="2dp"
     android:padding="5dp">
 
     <TextView
