--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_autonteleop.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_autonteleop.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorBackground"
-    tools:ignore="Overdraw">
+    android:layout_height="match_parent">
 
 
     <!--SANDSTORM-->
