--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_home__screen.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_home__screen.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
-    android:screenOrientation="portrait"
-    tools:ignore="Overdraw">
+    android:screenOrientation="portrait">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/logo2"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginEnd="160dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitStart"
-        android:src="@drawable/team_logo"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonView4"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/team_logo_glitch" />
 
     <org.team930.bears.wears.ButtonView
         android:id="@+id/buttonView"
@@ -31,11 +29,11 @@
         app:button_function="navigate"
         app:label="Match Scouter"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:next_activity="PreMatch"
         app:text=">" />
+
 
     <org.team930.bears.wears.ButtonView
         android:id="@+id/buttonView2"
@@ -74,6 +72,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonView3"
         app:next_activity="Settings"
-        app:text=">" />
+        app:text=">" >
 
+    </org.team930.bears.wears.ButtonView>
 </androidx.constraintlayout.widget.ConstraintLayout>
