--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_settings.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_settings.xml
@@ -5,14 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:background="@color/colorBackground">
+    android:focusableInTouchMode="true">
 
-
-    <!--Scouter Position-->
-
-    <!--Admin-->
-    <!--Delete le Data-->
     <org.team930.bears.wears.SpinnerView
         android:id="@+id/scouterPos"
         android:layout_width="match_parent"
@@ -45,7 +39,6 @@
             android:layout_marginRight="8dp"
             android:layout_marginLeft="4dp"
             android:layout_weight=".7"
-            android:background="@color/colorWhite"
             android:hint="Admin Password"
             android:maxLength="6"
             android:textColor="@color/textMedium"
@@ -57,6 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight=".3"
+            android:fontFamily="@font/montserratbold"
             android:backgroundTint="@color/colorAccentThree"
             android:onClick="setSubmitPassword"
             android:paddingLeft="5dp"
@@ -69,6 +63,7 @@
     </LinearLayout>
 
     <org.team930.bears.wears.ButtonView
+        android:id="@+id/buttonView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:button_function="delete"
@@ -78,7 +73,7 @@
         app:layout_constraintTop_toBottomOf="@+id/adminUnlock"
         app:next_activity="Settings"
         app:text="Confirm"
-        app:toast="Please Click Again to Delete Data"
-        />
+        app:toast="Please Click Again to Delete Data" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
