--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/chronometer_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/chronometer_view.xml
@@ -35,6 +35,7 @@
         android:fontFamily="@font/montserratbold"
         android:gravity="center"
         android:text="Start"
+        android:textColor="@color/textDark"
         app:layout_constraintDimensionRatio="1:1"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -63,6 +64,7 @@
         android:fontFamily="@font/montserratbold"
         android:gravity="center"
         android:text="Reset"
+        android:textColor="@color/textDark"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:textAllCaps="false"
