--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/values/attrs.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/values/attrs.xml
@@ -5,6 +5,10 @@
         <attr name="base" format="integer"></attr>
     </declare-styleable>
 
+    <declare-styleable name="label">
+        <attr name="center" format="boolean" > </attr>
+    </declare-styleable>
+
     <declare-styleable name="button">
         <attr name="text" format="string" > </attr>
         <attr name="button_function" format="enum">
