--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/values/styles.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryDark">@color/colorDarkBlue</item>
         <item name="colorAccent">@color/colorAccentOne</item>
         <item name="android:colorBackground">@color/colorBackground</item>
-        <item name="android:textColorPrimary">@color/textMedium</item>
+        <item name="android:textColorPrimary">@color/textWhite</item>
         <item name="colorControlActivated">@color/colorBase</item>
         <item name="colorButtonNormal">@color/colorBase</item>
         <item name="android:elevation">0dp</item>
