added other option for spinner and fixed counter view layout

--- a/Team930Scouting/WEARs/src/main/res/layout/chronometer_view.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/chronometer_view.xml
@@ -20,7 +20,7 @@
         android:gravity="left|center"
         android:paddingBottom="4dp"
         android:text="default"
-        android:textSize="30sp"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -51,6 +51,7 @@
         android:fontFamily="@font/montserratbold"
         android:gravity="center"
         android:textSize="25sp"
+        android:textColor="@color/textMedium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
