--- a/Team930Scouting/WEARs/src/main/res/layout/side_textbox_view.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/side_textbox_view.xml
@@ -19,7 +19,7 @@
         android:fontFamily="@font/montserratitalic"
         android:gravity="left|center"
         android:text="default"
-        android:textSize="30sp"
+        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,6 +32,7 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/montserratmedium"
         android:hint="default_hint"
+        android:includeFontPadding="false"
         android:inputType="text"
         android:text=""
         android:textSize="18sp"
