--- a/Team930Scouting/WEARs/src/main/res/layout/activity_autonteleop.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/activity_autonteleop.xml
@@ -6,116 +6,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <!--SANDSTORM-->
-
-
-    <org.team930.bears.wears.CheckboxView
-        android:id="@+id/checkboxView2"
-        android:layout_width="0dp"
+    <org.team930.bears.wears.LabelView
+        android:id="@+id/labelView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/checkboxList"
-        app:label="Checkbox"
-        app:layout_constraintEnd_toStartOf="@+id/guideline33"
+        app:center="true"
+        app:label="Autonomous"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <org.team930.bears.wears.ButtonView
-        android:id="@+id/buttonView6"
+    <org.team930.bears.wears.CounterView
+        android:id="@+id/aUpperPort"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:button_function="nav_confirm"
-        app:toast="Press Again to Continue To Post Match"
-        app:label="NextActivity"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:next_activity="PostMatch"
-        app:text="next" />
-
-    <org.team930.bears.wears.LabelView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:center="true"
-        app:label="Divider"
-        app:layout_constraintBottom_toTopOf="@+id/buttonView6"
-        app:layout_constraintEnd_toStartOf="@+id/guideline33"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chronometerView2" />
-
-    <org.team930.bears.wears.ChronometerView
-        android:id="@+id/chronometerView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:label="Chronometer"
-        app:layout_constraintEnd_toStartOf="@+id/guideline33"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/counterView2" />
-
-    <org.team930.bears.wears.SpinnerView
-        android:id="@+id/spinnerView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-
-        android:entries="@array/spinnerList"
-        app:label="Spinner"
+        app:label="Upper Port"
         app:layout_constraintEnd_toStartOf="@+id/guideline50"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkboxView2"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintTop_toBottomOf="@+id/initiationLine">
+
+    </org.team930.bears.wears.CounterView>
 
     <org.team930.bears.wears.CounterView
-        android:id="@+id/counterView2"
+        android:id="@+id/aBottomPort"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-
-        app:base="0"
-        app:increment="1"
-        app:label="Missed"
-        app:layout_constraintEnd_toStartOf="@+id/guideline50"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerView2" />
-
-    <org.team930.bears.wears.TextboxView
-        android:id="@+id/textboxView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:hint="default_hint"
-        app:label="Small"
-        app:label_location="side"
+        app:label="Bottom Port"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline66"
-        app:layout_constraintTop_toBottomOf="@+id/seekbarView2" />
-
-    <org.team930.bears.wears.SeekbarView
-        android:id="@+id/seekbarView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:ceil="5"
-
-        app:ceil_name="Shut down"
-        app:floor="1"
-        app:floor_name="Didn't affect"
-        app:label="Seekbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@+id/guideline50"
-        app:layout_constraintTop_toBottomOf="@+id/toggleView2"
-        app:zero_name="Not Ranked" />
+        app:layout_constraintTop_toBottomOf="@+id/labelView" />
 
     <org.team930.bears.wears.ToggleView
-        android:id="@+id/toggleView2"
+        android:id="@+id/initiationLine"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:label="Toggle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline50"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.5">
-
-    </org.team930.bears.wears.ToggleView>
+        android:layout_height="0dp"
+        app:label="Initiation Line"
+        app:layout_constraintBottom_toBottomOf="@+id/aBottomPort"
+        app:layout_constraintEnd_toStartOf="@+id/guideline50"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/labelView"
+        app:layout_constraintVertical_bias="0.53" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline50"
@@ -127,21 +58,43 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline33"
-        android:layout_width="wrap_content"
+    <org.team930.bears.wears.CounterView
+        android:id="@+id/aInnerPort"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="320dp"
-        app:layout_constraintGuide_percent=".40" />
+        app:label="Inner Port"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/aUpperPort"
+        app:layout_constraintTop_toBottomOf="@id/aBottomPort" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline66"
-        android:layout_width="wrap_content"
+    <org.team930.bears.wears.SpinnerView
+        android:id="@+id/spinnerView2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.66"
-        app:layout_constraintHorizontal_bias="0.66" />
+        android:entries="@array/autoFail"
+        app:label="How did it fail?"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline50"
+        app:layout_constraintTop_toBottomOf="@+id/aUpperPort"
+        app:other_enabled="true" />
+
+    <org.team930.bears.wears.ToggleView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:label="Grabbed Balls Not Shot?"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerView2" />
+
+    <org.team930.bears.wears.ToggleView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:label="Auto Fail?"
+        app:layout_constraintEnd_toStartOf="@+id/guideline50"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/aUpperPort" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
