--- a/Team930Scouting/WEARs/src/main/res/layout/toggle_view.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/toggle_view.xml
@@ -13,11 +13,11 @@
     <TextView
         android:id="@+id/toggleLabelView"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/montserratitalic"
         android:gravity="left|center"
         android:text="default"
-        android:textSize="30sp"
+        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,11 +26,11 @@
     <Switch
         android:id="@+id/toggle"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_height="0dp"
         android:checked="false"
         android:fontFamily="@font/montserratbold"
-        android:paddingRight="2dp"
         android:paddingLeft="2dp"
+        android:paddingRight="2dp"
         android:textColor="@color/colorWhite"
         android:theme="@style/mySwitchStyle"
         app:layout_constraintBottom_toBottomOf="parent"
